--- a/codes.html
+++ b/codes.html
@@ -125,7 +125,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-md-4 gal-sec">
 						<div class="gallery-grid1">
 							<a title="Nulla porttitor accumsana." href="/photograph/IMG_20200513_124136_721.jpg"></a>
-							<img src="/photograph/IMG_20200513_124136_721.jpg" alt=" " class="img-responsive" >
+							<img src="/photograph/IMG_20200513_124136_721.jpg"  class="img-responsive">
 							<div class="p-mask">
 								<h4>View</h4>
 								<p>Gallery</p>
@@ -134,7 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="gallery-grid1">
 							<a title="Nulla porttitor accumsana." href="/photograph/IMG_20200513_124140_648.jpg">
-							<img src="/photograph/IMG_20200513_124140_648.jpg" alt=" " class="img-responsive" >
+							<img src="/photograph/IMG_20200513_124140_648.jpg"  class="img-responsive">
 							<div class="p-mask">
 								<h4>View</h4>
 								<p>Gallery</p>
