--- a/gallery.html
+++ b/gallery.html
@@ -111,7 +111,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091141_861.jpg">
-						<img src="/ashwinart/IMG_20200513_091141_861.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200513_091141_861.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -121,7 +121,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091144_958.jpg">
-						<img src="/ashwinart/IMG_20200513_091144_958.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200513_091144_958.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -131,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<br>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091207_282.jpg">
-						<img src="/ashwinart/IMG_20200513_091207_282.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200513_091207_282.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -141,7 +141,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<br>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200516_173841_595.jpg">
-						<img src="/ashwinart/IMG_20200516_173841_595.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200516_173841_595.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -152,7 +152,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 gal-sec">
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091147_525.jpg">
-						<img src="/ashwinart/IMG_20200513_091147_525.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200513_091147_525.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -161,7 +161,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana" href="/ashwinart/IMG_20200513_091150_969.jpg">
-						<img src="/ashwinart/IMG_20200513_091150_969.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200513_091150_969.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -170,7 +170,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091154_081.jpg">
-						<img src="/ashwinart/IMG_20200513_091154_081.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200513_091154_081.jpg" class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -180,7 +180,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<br>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091210_398.jpg">
-						<img src="/ashwinart/IMG_20200513_091210_398.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200513_091210_398.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -190,7 +190,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<br>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200516_173840_194.jpg">
-						<img src="/ashwinart/IMG_20200516_173840_194.jpg" alt=" " class="img-responsive">
+						<img src="/ashwinart/IMG_20200516_173840_194.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -201,7 +201,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 gal-sec">
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091157_234.jpg">
-						<img src="/ashwinart/IMG_20200513_091157_234.jpg" alt=" " class="img-responsive" />
+						<img src="/ashwinart/IMG_20200513_091157_234.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -210,7 +210,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091200_121.jpg">
-						<img src="/ashwinart/IMG_20200513_091200_121.jpg" alt=" " class="img-responsive" />
+						<img src="/ashwinart/IMG_20200513_091200_121.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -220,7 +220,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<br>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200513_091204_643.jpg">
-						<img src="/ashwinart/IMG_20200513_091204_643.jpg" alt=" " class="img-responsive" />
+						<img src="/ashwinart/IMG_20200513_091204_643.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -230,7 +230,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<br>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200516_173834_612.jpg">
-						<img src="/ashwinart/IMG_20200516_173834_612.jpg" alt=" " class="img-responsive" />
+						<img src="/ashwinart/IMG_20200516_173834_612.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -240,7 +240,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<br>
 					<div class="gallery-grid1">
 						<a title="Nulla porttitor accumsana." href="/ashwinart/IMG_20200516_173844_817.jpg">
-						<img src="/ashwinart/IMG_20200516_173844_817.jpg" alt=" " class="img-responsive" />
+						<img src="/ashwinart/IMG_20200516_173844_817.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
