--- a/gallery.html
+++ b/gallery.html
@@ -110,8 +110,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 gal-sec">
 					
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091138_841.jpg">
+						<img src="ashwinart/IMG_20200513_091138_841.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
