--- a/gallery.html
+++ b/gallery.html
@@ -120,8 +120,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091141_861.jpg">
+						<img src="ashwinart/IMG_20200513_091141_861.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -130,8 +130,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<br>
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091144_958.jpg">
+						<img src="ashwinart/IMG_20200513_091144_958.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -140,8 +140,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<br>
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091207_282.jpg">
+						<img src="ashwinart/IMG_20200513_091207_282.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -160,8 +160,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</a>
 					</div>
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana" href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana" href="ashwinart/IMG_20200516_173841_595.jpg">
+						<img src="ashwinart/IMG_20200516_173841_595.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -169,18 +169,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</a>
 					</div>
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src="" class="img-responsive">
-						<div class="p-mask">
-							<h4>View</h4>
-							<p>Gallery</p>
-						</div>
-						</a>
-					</div>
-					<br>
-					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091147_525.jpg">
+						<img src="ashwinart/IMG_20200513_091147_525.jpg" class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -189,8 +179,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<br>
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091150_969.jpg">
+						<img src="ashwinart/IMG_20200513_091150_969.jpg"  class="img-responsive">
+						<div class="p-mask">
+							<h4>View</h4>
+							<p>Gallery</p>
+						</div>
+						</a>
+					</div>
+					<br>
+					<div class="gallery-grid1">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091154_081.jpg">
+						<img src="ashwinart/IMG_20200513_091154_081.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -200,8 +200,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-4 gal-sec">
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091210_398.jpg">
+						<img src="ashwinart/IMG_20200513_091210_398.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -209,18 +209,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</a>
 					</div>
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
-						<div class="p-mask">
-							<h4>View</h4>
-							<p>Gallery</p>
-						</div>
-						</a>
-					</div>
-					<br>
-					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200516_173840_194.jpg">
+						<img src="ashwinart/IMG_20200516_173840_194.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -229,8 +219,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<br>
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091157_234.jpg">
+						<img src="ashwinart/IMG_20200513_091157_234.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
@@ -239,8 +229,18 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<br>
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091200_121.jpg">
+						<img src="ashwinart/IMG_20200513_091200_121.jpg"  class="img-responsive">
+						<div class="p-mask">
+							<h4>View</h4>
+							<p>Gallery</p>
+						</div>
+						</a>
+					</div>
+					<br>
+					<div class="gallery-grid1">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200513_091204_643.jpg">
+						<img src="ashwinart/IMG_20200513_091204_643.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
