--- a/gallery.html
+++ b/gallery.html
@@ -148,11 +148,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						</a>
 					</div>
+					<br>
+					<div class="gallery-grid1">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200516_173844_817.jpg">
+						<img src="ashwinart/IMG_20200516_173844_817.jpg"  class="img-responsive">
+						<div class="p-mask">
+							<h4>View</h4>
+							<p>Gallery</p>
+						</div>
+						</a>
+					</div>
 				</div>
 				<div class="col-md-4 gal-sec">
 					<div class="gallery-grid1">
-						<a title="Nulla porttitor accumsana." href="">
-						<img src=""  class="img-responsive">
+						<a title="Nulla porttitor accumsana." href="ashwinart/IMG_20200516_173834_612.jpg">
+						<img src="ashwinart/IMG_20200516_173834_612.jpg"  class="img-responsive">
 						<div class="p-mask">
 							<h4>View</h4>
 							<p>Gallery</p>
