--- a/codes.html
+++ b/codes.html
@@ -693,7 +693,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ul class="social_section_1info">
 							<li><a href="https://www.facebook.com/ashwini.dey"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="https://instagram.com/ashwini_dey?igshid=xzsdpt2tgyjh"><i class="fab fa-instagram"></i></a></li>
-						<li><a href="https://wa.me/9996560409/?text=Hi Ashwini Dey,"><i class="fab fa-whatsapp"></i></a></li>
+						<li><a href="https://wa.me/+919996560409/?text=Hi Ashwini Dey,"><i class="fab fa-whatsapp"></i></a></li>
 						<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
 						</ul>
 					</div>
@@ -733,7 +733,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<ul class="social_section_1info">
 							<li><a href="https://www.facebook.com/ashwini.dey"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="https://instagram.com/ashwini_dey?igshid=xzsdpt2tgyjh"><i class="fab fa-instagram"></i></a></li>
-						<li><a href="https://wa.me/9996560409/?text=Hi Ashwini Dey,"><i class="fab fa-whatsapp"></i></a></li>
+						<li><a href="https://wa.me/+919996560409/?text=Hi Ashwini Dey,"><i class="fab fa-whatsapp"></i></a></li>
 						<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
 						</ul>
 					</div>
